extends Node

export (PackedScene) var Mob
var score

func _ready():
	randomize()

func _on_StartTimer_timeout() -> void:
	pass # Replace with function body.


func _on_ScoreTimer_timeout() -> void:
	pass # Replace with function body.


func _on_MobTimer_timeout() -> void:
	pass # Replace with function body.
